--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
-.App {
-  text-align: center;
+body{
+  background-color: rgb(35, 35, 35);
+  color: white;
+  
+}
+.box{
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #405950;
+  padding: 50px;
+  margin: 50px auto;
+  width: 60%;
+  border-radius: 10px;
+  line-height: 1.5;
+  align-items: center;
+  height: 450px;
+  border: 1px solid black;
+  color: #D9D9D9;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.box-text{
+  width: 70%; /* The width of the text box */
+  box-sizing:border-box;
+  font-size: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.box-image{
+  width: 30%; /* The width of the image box */
+  height: 300px;
+  border-radius: 10px;
+  border: 2px solid black;
+  background-color: white;
+  box-sizing:border-box;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+  background-color: rgb(35, 35, 35);
+  height: 250px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.btn{
+  background-color: rgb(35, 35, 35);
+  border: 1px solid #A8E6CF;
+  border-radius: 10px;
+  color: #A8E6CF;
+  padding: 20px;
+  font-size: 20px;
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: background-color 0.3s, transform 0.3s; 
+  cursor: pointer; 
+ }
+
+ .btn:hover {
+  background-color: rgb(60, 60, 60); /* Lighter Gray on hover */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logo-image{
+  height: 250px;
+  width: auto;
+}
+.episode-box{
+  overflow: auto;
+  height: 100px;
+  display: flex;
+  flex-wrap: wrap;
+  width: 60%;
+  border: 1px solid #D9D9D9;
+  border-radius: 10px;
+}
+.episode-item {
+  flex: 0 0 100%; 
+  box-sizing: border-box; 
+  padding: 5px; 
+}
+
+a{
+  color: #D9D9D9;
 }
